--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <div>
             <a href="solution-hw1/index.html">Homework 1</a>
+            <a href="solution-hw2/index.html">Homework 2</a>
         </div>
     </body>
 </html>
