--- a/index.html
+++ b/index.html
@@ -6,69 +6,72 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <div class="left">
-            <a href="index.html">
-                <img class="logo-image-size" src="images/logo-01.svg" alt="Logo-image">
-            </a>
-        </div>
-        <div class="middle">
-            <div class="nav-bar-links">
-                <a href="#" class="nav-link active">
-                    PRODUCTS
-                </a>
-                <br>
-                <a href="cart.html" class="nav-link">
-                    CART
-                </a>
+            <div class="heading">
+                <div class="left">
+                    <a href="index.html">
+                        <img class="logo-image-size" src="images/logo-01.svg" alt="Logo-image">
+                    </a>
+                </div>
+                <div class="middle flex-container">
+                    <div class="nav-bar-links">
+                        <a href="cart.html" class="nav-link">
+                            CART
+                        </a>
+                        <a href="#" class="nav-link active">
+                            PRODUCTS
+                        </a>
+                    </div>
+                    <div class="tagline">
+                        <p>
+                            Our hand-made cinnamon rolls
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="tagline">
-                <p>
-                    Our hand-made cinnamon rolls
-                </p>
+                <div class="flex-container">
+                <div class="item">
+                    <a href="productdetails.html">
+                        <img src="images/original-cinnamon-roll.jpg" class="border" alt="original-cinnamon-roll">
+                    </a>
+                    <a href="productdetails.html">Original cinnamon roll</a>
+                    <p class="margin">$2.49</p>
+                    
+                </div>
+                <div class="item">
+                    <a href="productdetails.html">
+                        <img src="images/apple-cinnamon-roll.jpg" class="border" alt="apple-cinnamon-roll">
+                    </a>
+                    <a href="productdetails.html">Apple cinnamon roll</a>
+                    <p class="margin">$3.49</p>
+                </div>
+                <div class="item">
+                    <a href="productdetails.html">
+                        <img src="images/raisin-cinnamon-roll.jpg" class="border" alt="raisin-cinnamon-roll">
+                    </a>
+                    <a href="productdetails.html">Raisin cinnamon roll</a>
+                    <p class="margin">$2.99</p>
+                </div>
+                <div class="item">
+                    <a href="productdetails.html">
+                        <img src="images/walnut-cinnamon-roll.jpg" class="border" alt="walnut-cinnamon-roll">
+                    </a>
+                    <a href="productdetails.html">Walnut cinnamon roll</a>
+                    <p class="margin">$3.49</p>
+                </div>
+                <div class="item">
+                    <a href="productdetails.html">
+                        <img src="images/double-chocolate-cinnamon-roll.jpg" class="border" alt="double-choccolate-cinnamon-roll">
+                    </a>
+                    <a href="productdetails.html">Double-chocolate cinnamon roll</a>
+                    <p class="margin">$3.99</p>
+                </div>
+                <div class="item">
+                    <a href="productdetails.html">
+                        <img src="images/strawberry-cinnamon-roll.jpg" class="border" alt="strawberry-cinnamon-roll">
+                    </a>
+                    <a href="productdetails.html">Strawberry cinnamon roll</a>
+                    <p class="margin">$3.99</p>
+                </div>
             </div>
-            <div class="item">
-                <a href="productdetails.html">
-                    <img src="images/original-cinnamon-roll.jpg" class="border" alt="original-cinnamon-roll">
-                </a>
-                <a href="productdetails.html">Original cinnamon roll</a>
-                <p class="margin">$2.49</p>
-                
-            </div>
-            <div class="item">
-                <a href="productdetails.html">
-                    <img src="images/apple-cinnamon-roll.jpg" class="border" alt="apple-cinnamon-roll">
-                </a>
-                <a href="productdetails.html">Apple cinnamon roll</a>
-                <p class="margin">$3.49</p>
-            </div>
-            <div class="item">
-                <a href="productdetails.html">
-                    <img src="images/raisin-cinnamon-roll.jpg" class="border" alt="raisin-cinnamon-roll">
-                </a>
-                <a href="productdetails.html">Raisin cinnamon roll</a>
-                <p class="margin">$2.99</p>
-            </div>
-            <div class="item">
-                <a href="productdetails.html">
-                    <img src="images/walnut-cinnamon-roll.jpg" class="border" alt="walnut-cinnamon-roll">
-                </a>
-                <a href="productdetails.html">Walnut cinnamon roll</a>
-                <p class="margin">$3.49</p>
-            </div>
-            <div class="item">
-                <a href="productdetails.html">
-                    <img src="images/double-chocolate-cinnamon-roll.jpg" class="border" alt="double-choccolate-cinnamon-roll">
-                </a>
-                <a href="productdetails.html">Double-chocolate cinnamon roll</a>
-                <p class="margin">$3.99</p>
-            </div>
-            <div class="item">
-                <a href="productdetails.html">
-                    <img src="images/strawberry-cinnamon-roll.jpg" class="border" alt="strawberry-cinnamon-roll">
-                </a>
-                <a href="productdetails.html">Strawberry cinnamon roll</a>
-                <p class="margin">$3.99</p>
-            </div>
-        </div>
     </body>
 </html>
