fixed styling after merge

--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -12,7 +12,7 @@
                     <img class="logo-image-size" src="images/logo-01.svg" alt="Logo-image">
                 </a>
             </div>
-            <div class="middle flex-container">
+            <div class="middle">
                 <div class="nav-bar-links">
                     <a href="cart.html" class="nav-link">
                         CART
