--- a/solution-hw2/productdetails.html
+++ b/solution-hw2/productdetails.html
@@ -6,8 +6,6 @@
         <meta charset="utf-8">
     </head>
     <body>
-
-
         <div class="left">
             <a href="index.html">
                 <img class="logo-image-size" src="images/logo-01.svg" alt="Logo-image">
@@ -17,16 +15,19 @@
 
         <div class="middle">
             <div class="nav-bar-links">
-                <a href="index.html" class="nav-link active">PRODUCTS</a>
-                <br>
                 <a href="cart.html" class="nav-link">CART</a>
+                <a href="index.html" class="nav-link active">PRODUCTS</a>
+               
             </div>
             <div class="tagline">
                 <p>Original Cinnamon Roll</p>
             </div>
-                <img src="images/original-cinnamon-roll.jpg" class="product-border" alt="original-cinnamon-roll">
+        </div>
+            <div class="flex-container">
+            <img src="images/original-cinnamon-roll.jpg" class="product-border" alt="original-cinnamon-roll">
             <div class="product-description">
-                <p>Customize our delicious, hand-made cinnamon roll to your liking!</p>
+                <div>Customize our delicious, hand-made cinnamon roll to your liking!</div>
+                <br>
                 
                 <!-- form example adapted from  https://www.w3schools.com/ -->
                 <form>
