--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <div>
             <a href="solution-hw1/index.html">Homework 1</a>
             <a href="solution-hw2/index.html">Homework 2</a>
+            <a href="solution-hw3/index.html">Homework 3</a>
         </div>
     </body>
 </html>
