--- a/solution-hw3/productdetails.html
+++ b/solution-hw3/productdetails.html
@@ -32,21 +32,11 @@
                 <!-- form example adapted from  https://www.w3schools.com/ -->
                 <form>
                     <label for="Glazing">Glazing:</label>
-                    <select name="Glazing" id="Glazing">
-                    <option value="Keep-Original">Keep original</option>
-                    <option value="Sugar milk">Sugar milk</option>
-                    <option value="Vanilla milk">Vanilla milk</option>
-                    <option value="Double Chocolate">Double Chocolate</option>
-                    </select>
+                    <select name="Glazing" id="Glazing"></select>
                     <br><br>
 
                     <label for="Pack-size">Pack size:</label>
-                    <select name="Pack size" id="Pack-size">
-                    <option value="1">1</option>
-                    <option value="3">3</option>
-                    <option value="6">6</option>
-                    <option value="12">12</option>
-                    </select>
+                    <select name="Pack-size" id="Pack-size"></select>
                     <br><br>
                     <div class="price-and-cart">
                         <p id="price">$2.49</p>
@@ -55,3 +45,7 @@
                 </form>
             </div>
         </div>
+        <script src="scripts/script.js"></script>
+    </body>
+</html>
+
