--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <a href="solution-hw1/index.html">Homework 1</a>
             <a href="solution-hw2/index.html">Homework 2</a>
             <a href="solution-hw3/index.html">Homework 3</a>
+            <a href="solution-hw4/index.html">Homework 4</a>
         </div>
     </body>
 </html>
