--- a/solution-hw4/productdetails.html
+++ b/solution-hw4/productdetails.html
@@ -19,12 +19,10 @@
                 <a href="index.html" class="nav-link active">PRODUCTS</a>
                
             </div>
-            <div class="tagline">
-                <p>Original Cinnamon Roll</p>
-            </div>
+            <div class="tagline"></div>
         </div>
             <div class="flex-container">
-            <img src="images/original-cinnamon-roll.jpg" class="product-border" alt="original-cinnamon-roll">
+            <img src="images/original-cinnamon-roll.jpg" class="product-border" id="image" alt="original-cinnamon-roll">
             <div class="product-description">
                 <div>Customize our delicious, hand-made cinnamon roll to your liking!</div>
                 <br>
@@ -39,12 +37,13 @@
                     <select name="Pack-size" id="Pack-size"></select>
                     <br><br>
                     <div class="price-and-cart">
-                        <p id="price">$2.49</p>
-                        <input id='add-to-cart' type="submit" value="Add to Cart">
+                        <p id="price"></p>
+                        <input onclick="addToCart()" id='add-to-cart' type="button" value="Add to Cart">
                     </div>
                 </form>
             </div>
         </div>
+        <script src="scripts/rollsData.js"></script>
         <script src="scripts/script.js"></script>
     </body>
 </html>
