--- a/solution-hw4/index.html
+++ b/solution-hw4/index.html
@@ -30,7 +30,7 @@
         </div>
             <div class="flex-container">
             <div class="item">
-                <a href="productdetails.html">
+                <a href="productdetails.html?roll=Original">
                     <img src="images/original-cinnamon-roll.jpg" class="border" alt="original-cinnamon-roll">
                 </a>
                 <a href="productdetails.html">Original cinnamon roll</a>
@@ -38,35 +38,35 @@
                 
             </div>
             <div class="item">
-                <a href="productdetails.html">
+                <a href="productdetails.html?roll=Apple">
                     <img src="images/apple-cinnamon-roll.jpg" class="border" alt="apple-cinnamon-roll">
                 </a>
                 <a href="productdetails.html">Apple cinnamon roll</a>
                 <p class="margin">$3.49</p>
             </div>
             <div class="item">
-                <a href="productdetails.html">
+                <a href="productdetails.html?roll=Raisin">
                     <img src="images/raisin-cinnamon-roll.jpg" class="border" alt="raisin-cinnamon-roll">
                 </a>
                 <a href="productdetails.html">Raisin cinnamon roll</a>
                 <p class="margin">$2.99</p>
             </div>
             <div class="item">
-                <a href="productdetails.html">
+                <a href="productdetails.html?roll=Walnut">
                     <img src="images/walnut-cinnamon-roll.jpg" class="border" alt="walnut-cinnamon-roll">
                 </a>
                 <a href="productdetails.html">Walnut cinnamon roll</a>
                 <p class="margin">$3.49</p>
             </div>
             <div class="item">
-                <a href="productdetails.html">
+                <a href="productdetails.html?roll=Double-Chocolate">
                     <img src="images/double-chocolate-cinnamon-roll.jpg" class="border" alt="double-choccolate-cinnamon-roll">
                 </a>
                 <a href="productdetails.html">Double-chocolate cinnamon roll</a>
                 <p class="margin">$3.99</p>
             </div>
             <div class="item">
-                <a href="productdetails.html">
+                <a href="productdetails.html?roll=Strawberry">
                     <img src="images/strawberry-cinnamon-roll.jpg" class="border" alt="strawberry-cinnamon-roll">
                 </a>
                 <a href="productdetails.html">Strawberry cinnamon roll</a>
