--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <a href="solution-hw2/index.html">Homework 2</a>
             <a href="solution-hw3/index.html">Homework 3</a>
             <a href="solution-hw4/index.html">Homework 4</a>
+            <a href="solution-hw5/index.html">Homework 5</a>
         </div>
     </body>
 </html>
