--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <a href="solution-hw3/index.html">Homework 3</a>
             <a href="solution-hw4/index.html">Homework 4</a>
             <a href="solution-hw5/index.html">Homework 5</a>
+            <a href="solution-hw6/index.html">Homework 6</a>
         </div>
     </body>
 </html>
