added most css and things

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a href="solution-hw4/index.html">Homework 4</a>
             <a href="solution-hw5/index.html">Homework 5</a>
             <a href="solution-hw6/index.html">Homework 6</a>
+            <a href="FP1/index.html">Final Project 1</a>
         </div>
     </body>
 </html>
