--- a/FP1/cookie.html
+++ b/FP1/cookie.html
@@ -12,8 +12,22 @@
         <img src="images/newjeansstar.svg" class="star" id="star3"/>
         <img src="images/newjeansstar.svg" class="star" id="star4"/>
         <img src="images/newjeansstar.svg" class="star" id="star5"/> -->
-        <div id="hamburgerMenu">hamburger menu</div>
-        <img src="images/newjeansbunnyfull.svg" class="grower"/>
+        <a href="index.html"><img src="images/newjeansbunnyfull.svg" class="bunny grower"/></a>
+        <div id="menu">
+            <div id="menu-bar" onclick="menuOnClick()">
+                <div id="bar1" class="bar"></div>
+                <div id="bar2" class="bar"></div>
+                <div id="bar3" class="bar"></div>
+            </div>
+            <div class="hbrgr" id="hbrgr">
+                <ul>
+                    <li><a href="attention.html">Attention</a></li>
+                    <li><a href="hypeBoy.html">Hype Boy</a></li>
+                    <li><a href="cookie.html">Cookie</a></li>
+                    <li><a href="hurt.html">Hurt</a></li>
+                </ul>
+            </div> 
+        </div>
         <div class="row">
             <div class="column leftAttention">
                 <img src="images/newjeanscookie.svg" class="megaphoneimage"/>
