--- a/FP1/hypeBoy.html
+++ b/FP1/hypeBoy.html
@@ -12,8 +12,22 @@
         <img src="images/newjeansstar.svg" class="star" id="star8"/>
         <img src="images/newjeansstar.svg" class="star" id="star9"/>
         <img src="images/newjeansstar.svg" class="star" id="star10"/>
-        <div id="hamburgerMenu">hamburger menu</div>
-        <img src="images/newjeansbunnyfull.svg" class="grower"/>
+        <a href="index.html"><img src="images/newjeansbunnyfull.svg" class="bunny grower"/></a>
+        <div id="menu">
+            <div id="menu-bar" onclick="menuOnClick()">
+                <div id="bar1" class="bar"></div>
+                <div id="bar2" class="bar"></div>
+                <div id="bar3" class="bar"></div>
+            </div>
+            <div class="hbrgr" id="hbrgr">
+                <ul>
+                    <li><a href="attention.html">Attention</a></li>
+                    <li><a href="hypeBoy.html">Hype Boy</a></li>
+                    <li><a href="cookie.html">Cookie</a></li>
+                    <li><a href="hurt.html">Hurt</a></li>
+                </ul>
+            </div> 
+        </div>
         <div class="row">
             <div class="column leftHypeBoy">
                 <div class="rightContent">
@@ -24,7 +38,7 @@
                                 <img src="images/playsong.svg" class="playsongImage"/>
                             </div>
                             <div class="collapsible-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/VOmIplFAGeg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/9wUKhEgnllc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </li>
                     </ul>
@@ -118,7 +132,8 @@
             </div>
             </div>
           </div>
-        <img src="images/newjeansgroupphoto2.svg" class="groupPhotoTwo grower"/>
+          <img src="images/newjeansgroupphoto2.svg" class="groupPhotoTwo grower"/>
+
         <script type="text/javascript" src="scripts/materialize.js"></script>
         <script src="scripts/scripts.js"></script>
     </body>
