--- a/FP1/index.html
+++ b/FP1/index.html
@@ -7,30 +7,45 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <div id="hamburgerMenu">hamburger menu</div>
-            <div class="middle">
-                <img src="images/newjeanstitle.svg" />
-                <div>NewJeans 1st EP ‘New Jeans’</div>
-                <div class="carousel">
-                    <div class="carousel-item glow white-text" href="#one!" id="hyeinPhotoCardInfo">
-                      <img src="images/megaphoneCarousel.svg">
-                    </div>
-                    <div class="carousel-item glow white-text" href="#two!" id="minjiPhotoCardInfo">
-                      <img src="images/flipphoneCarousel.svg">
-                    </div>
-                    <div class="carousel-item glow white-text" href="#three!" id="haerinPhotoCardInfo">
-                      <img src="images/cookieCarousel.svg">
-                    </div>
-                    <div class="carousel-item glow white-text" href="#four!" id="hanniPhotoCardInfo">
-                      <img src="images/hurtCarousel.svg">
-                    </div>
-                    <div class="carousel-item glow white-text" href="#five!" id="daniellePhotoCardInfo">
-                        <img src="images/groupphotoCarousel.svg">
-                    </div>
-                </div>
-                <div id="carouselCaption">caption</div>
+        <a href="index.html"><img src="images/newjeansbunnyfull.svg" class="bunny grower"/></a>
+        <div id="menu">
+            <div id="menu-bar" onclick="menuOnClick()">
+                <div id="bar1" class="bar"></div>
+                <div id="bar2" class="bar"></div>
+                <div id="bar3" class="bar"></div>
             </div>
-        <img src="images/newjeansbunny.svg" class="indexbunny">
+            <div class="hbrgr" id="hbrgr">
+                <ul>
+                    <li><a href="attention.html">Attention</a></li>
+                    <li><a href="hypeBoy.html">Hype Boy</a></li>
+                    <li><a href="cookie.html">Cookie</a></li>
+                    <li><a href="hurt.html">Hurt</a></li>
+                </ul>
+            </div> 
+        </div>
+        <div class="middle">
+            <img src="images/newjeanstitle.svg" />
+            <div>NewJeans 1st EP ‘New Jeans’</div>
+            <div class="carousel">
+                <div class="carousel-item glow white-text" href="#one!" id="hyeinPhotoCardInfo">
+                    <img src="images/megaphoneCarousel.svg">
+                </div>
+                <div class="carousel-item glow white-text" href="#two!" id="minjiPhotoCardInfo">
+                    <img src="images/flipphoneCarousel.svg">
+                </div>
+                <div class="carousel-item glow white-text" href="#three!" id="haerinPhotoCardInfo">
+                    <img src="images/cookieCarousel.svg">
+                </div>
+                <div class="carousel-item glow white-text" href="#four!" id="hanniPhotoCardInfo">
+                    <img src="images/hurtCarousel.svg">
+                </div>
+                <div class="carousel-item glow white-text" href="#five!" id="daniellePhotoCardInfo">
+                    <img src="images/groupphotoCarousel.svg">
+                </div>
+            </div>
+            <div id="carouselCaption">caption</div>
+        </div>
+        <img src="images/newjeansbunny.svg" class="indexbunny grower">
         <script type="text/javascript" src="scripts/materialize.js"></script>
         <script src="scripts/scripts.js"></script>
     </body>
