--- a/FP1/about.html
+++ b/FP1/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <!-- from https://www.w3schools.com/cssref/tryit.php?filename=trycss3_media_bg -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
         <link rel="stylesheet" href="css/style.css">
         <title>NewJeans</title>
@@ -31,29 +33,29 @@
                 The members consist of Minji, Hanni, Danielle, Haerin, and Hyein.</p>
         </div>
         <div class="carousel">
-            <div class="carousel-item white-text" href="#one!" id="hyeinPhotoCardInfo" onclick="updatePhotocardInfo('hyein')">
+            <div class="carousel-item white-text" id="hyeinPhotoCardInfo" onclick="updatePhotocardInfo('hyein')">
                 <img src="images/hyeinPhotocard.svg">
                 <img src="images/hyeinName.svg" id="memberNamesAboutPage">
             </div>
-            <div class="carousel-item white-text" href="#two!" id="minjiPhotoCardInfo" onclick="updatePhotocardInfo('minji')">
+            <div class="carousel-item white-text" id="minjiPhotoCardInfo" onclick="updatePhotocardInfo('minji')">
                 <img src="images/minjiPhotocard.svg">
                 <img src="images/minjiName.svg" id="memberNamesAboutPage">
             </div>
-            <div class="carousel-item white-text" href="#three!" id="haerinPhotoCardInfo" onclick="updatePhotocardInfo('haerin')">
+            <div class="carousel-item white-text" id="haerinPhotoCardInfo" onclick="updatePhotocardInfo('haerin')">
                 <img src="images/haerinPhotocard.svg">
                 <img src="images/haerinName.svg" id="memberNamesAboutPage">
             </div>
-            <div class="carousel-item white-text" href="#four!" id="hanniPhotoCardInfo" onclick="updatePhotocardInfo('hanni')">
+            <div class="carousel-item white-text" id="hanniPhotoCardInfo" onclick="updatePhotocardInfo('hanni')">
                 <img src="images/hanniPhotocard.svg">
                 <img src="images/hanniName.svg" id="memberNamesAboutPage">
             </div>
-            <div class="carousel-item white-text" href="#five!" id="daniellePhotoCardInfo" onclick="updatePhotocardInfo('danielle')">
+            <div class="carousel-item white-text" id="daniellePhotoCardInfo" onclick="updatePhotocardInfo('danielle')">
                 <img src="images/daniellePhotocard.svg">
                 <img src="images/danielleName.svg" id="memberNamesAboutPage">
             </div>
         </div>
         <p id="photocardInfo">Hyein (해린) is a South Korean singer under ADOR. She is a member of the girl group NewJeans. ADOR: Jan 1, 2022-present. Aug 1, 2022.</p>
-        <img src="images/newjeansbunny.svg" class="indexbunny grower">
+        <img src="images/newjeansbunny.svg" class="indexbunnyAbout">
         <script type="text/javascript" src="scripts/materialize.js"></script>
         <script src="scripts/scripts.js"></script>
     </body>
