--- a/FP1/cookie.html
+++ b/FP1/cookie.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <!-- from https://www.w3schools.com/cssref/tryit.php?filename=trycss3_media_bg -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
         <link rel="stylesheet" href="css/style.css">
         <title>NewJeans</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <!-- <img src="images/newjeansstar.svg" class="star" id="star1"/>
-        <img src="images/newjeansstar.svg" class="star" id="star2"/>
-        <img src="images/newjeansstar.svg" class="star" id="star3"/>
-        <img src="images/newjeansstar.svg" class="star" id="star4"/>
-        <img src="images/newjeansstar.svg" class="star" id="star5"/> -->
+        <img src="images/newjeansstar.svg" class="star" id="star21"/>
+        <img src="images/newjeansstar.svg" class="star" id="star22"/>
+        <img src="images/newjeansstar.svg" class="star" id="star23"/>
+        <img src="images/newjeansstar.svg" class="star" id="star24"/>
+        <img src="images/newjeansstar.svg" class="star" id="star25"/>
         <a href="index.html"><img src="images/newjeansbunnyfull.svg" class="bunny grower"/></a>
         <div id="menu">
             <div id="menu-bar" onclick="menuOnClick()">
@@ -128,7 +130,7 @@
                 </div>
             </div>
           </div>
-        <img src="images/newjeansgroupphoto3.svg" class="groupPhotoOne grower"/>
+          <a href="about.html"><img src="images/newjeansgroupphoto3.svg" class="groupPhotoOne grower"/></a>
         <script type="text/javascript" src="scripts/materialize.js"></script>
         <script src="scripts/scripts.js"></script>
     </body>
