--- a/FP1/hurt.html
+++ b/FP1/hurt.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <!-- from https://www.w3schools.com/cssref/tryit.php?filename=trycss3_media_bg -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
         <link rel="stylesheet" href="css/style.css">
         <title>NewJeans</title>
@@ -115,7 +117,7 @@
             </div>
             </div>
           </div>
-        <img src="images/newjeansgroupphoto4.svg" class="groupPhotoFour grower"/>
+        <a href="about.html"><img src="images/newjeansgroupphoto4.svg" class="groupPhotoFour grower"/></a>
         <script type="text/javascript" src="scripts/materialize.js"></script>
         <script src="scripts/scripts.js"></script>
     </body>
