--- a/FP1/hypeBoy.html
+++ b/FP1/hypeBoy.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <!-- from https://www.w3schools.com/cssref/tryit.php?filename=trycss3_media_bg -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
         <link rel="stylesheet" href="css/style.css">
         <title>NewJeans</title>
@@ -38,7 +40,7 @@
                                 <img src="images/playsong.svg" class="playsongImage"/>
                             </div>
                             <div class="collapsible-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/9wUKhEgnllc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe src="https://www.youtube.com/embed/9wUKhEgnllc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </li>
                     </ul>
@@ -132,8 +134,7 @@
             </div>
             </div>
           </div>
-          <img src="images/newjeansgroupphoto2.svg" class="groupPhotoTwo grower"/>
-
+          <a href="about.html"><img src="images/newjeansgroupphoto2.svg" class="groupPhotoTwo grower"/></a>
         <script type="text/javascript" src="scripts/materialize.js"></script>
         <script src="scripts/scripts.js"></script>
     </body>
