--- a/FP1/hurt.html
+++ b/FP1/hurt.html
@@ -3,18 +3,18 @@
     <head>
         <!-- from https://www.w3schools.com/cssref/tryit.php?filename=trycss3_media_bg -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen"/>
         <link rel="stylesheet" href="css/style.css">
         <title>NewJeans</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <img src="images/newjeansstar.svg" class="star" id="star16"/>
-        <img src="images/newjeansstar.svg" class="star" id="star17"/>
-        <img src="images/newjeansstar.svg" class="star" id="star18"/>
-        <img src="images/newjeansstar.svg" class="star" id="star19"/>
-        <img src="images/newjeansstar.svg" class="star" id="star20"/>
-        <a href="index.html"><img src="images/newjeansbunnyfull.svg" class="bunny grower"/></a>
+        <img src="images/newjeansstar.svg" class="star" id="star16" alt=" Decorative star"/>
+        <img src="images/newjeansstar.svg" class="star" id="star17" alt=" Decorative star"/>
+        <img src="images/newjeansstar.svg" class="star" id="star18" alt=" Decorative star"/>
+        <img src="images/newjeansstar.svg" class="star" id="star19" alt=" Decorative star"/>
+        <img src="images/newjeansstar.svg" class="star" id="star20" alt=" Decorative star"/>
+        <a href="index.html"><img src="images/newjeansbunnyfull.svg" class="bunny grower" alt="New Jeans Bunny Mascot"/></a>
         <div id="menu">
             <div id="menu-bar" onclick="menuOnClick()">
                 <div id="bar1" class="bar"></div>
@@ -33,14 +33,14 @@
         <div class="row">
             <div class="column leftHypeBoy">
                 <div class="rightContent">
-                    <img src="images/Hurt.svg" class="hurtTitle"/>
+                    <img src="images/Hurt.svg" class="hurtTitle" alt="Hurt Title"/>
                     <ul class="collapsible">
                         <li>
                             <div class="collapsible-header">
-                                <img src="images/playsong.svg" class="playsongImage"/>
+                                <img src="images/playsong.svg" class="playsongImage"  alt="Play Song Image Icon"/>
                             </div>
                             <div class="collapsible-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/tVIXY14aJms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe src="https://www.youtube.com/embed/tVIXY14aJms" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </li>
                     </ul>
@@ -113,11 +113,11 @@
                 </div>
             </div>
             <div class="column rightHypeBoy">
-                <img src="images/newjeansSadFace.svg" class="sadFaceImage"/>
+                <img src="images/newjeansSadFace.svg" class="sadFaceImage" alt="Sad Face Image Icon"/>
             </div>
             </div>
-          </div>
-        <a href="about.html"><img src="images/newjeansgroupphoto4.svg" class="groupPhotoFour grower"/></a>
+        <a href="about.html"><img src="images/newjeansgroupphoto4.svg" class="groupPhotoFour grower" alt="NewJeans Group Photo"/></a>
+         <!-- type attribute necessary for materialize, even though it errors on the validator -->
         <script type="text/javascript" src="scripts/materialize.js"></script>
         <script src="scripts/scripts.js"></script>
     </body>
